--- a/Code/jesse_pena/html_css/lab-02.html
+++ b/Code/jesse_pena/html_css/lab-02.html
@@ -7,7 +7,7 @@ Feel free to use a CSS Framework. You may also want to use flexbox or grid, and 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog</title>
     <link rel="stylesheet" href="lab-02.css">
 </head>
 <body>
