--- a/Code/jesse_pena/html_css/lab-03.html
+++ b/Code/jesse_pena/html_css/lab-03.html
@@ -47,6 +47,20 @@
             We know it can be a struggle to climb and we're here to help. Contact us now and we'll get you excellent coaching so you can get to the elo you've always wanted. GOOD LUCK ON THE SUMMONER'S RIFT!
         </p>
     </section>
+    
+    <header>
+        WHY US?
+    </header>
+    <ul>
+        <li>IMPROVE</li>
+        <li>CLIMB</li>
+        <li>SMURF</li>
+    </ul>
+    <ul>
+        <li><img src="lab-03-improve.PNG" alt="galio"></li>
+        <li><img src="lab-03-climb.PNG" alt="galio"></li>
+        <li><img src="lab-03-smurf.PNG" alt="galio"></li>
+    </ul>
     <nav>
         <ul>
             <li>
