--- a/Code/jesse_pena/js/lab-09a/lab-09a.html
+++ b/Code/jesse_pena/js/lab-09a/lab-09a.html
@@ -11,13 +11,18 @@
     
 </head>
 <body>
-<div id='mapid'></div>
+    <header>Lab 9a</header>
+    <div id='mapid'></div>
+    <ul id='content'></ul>
     
 </body>
 
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
 integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
 crossorigin=""></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/js/lab-09a/lab-09a.js"></script>
 <link rel="stylesheet" href="/js/lab-09a/lab-09a.css">
+
+
 </html>
