--- a/3 JavaScript/examples/maps.html
+++ b/3 JavaScript/examples/maps.html
@@ -25,7 +25,7 @@
             <div id="information">
 
             </div>
-            <div class="s12 m7">
+            <div class="s12 m7" id="cards">
                 <div class="card horizontal">
                     <div class="card-image">
                     <img src="https://randomuser.me/api/portraits/men/75.jpg">
