calculator vue js

--- a/Code/jesse_pena/js/lab-12/lab-12.html
+++ b/Code/jesse_pena/js/lab-12/lab-12.html
@@ -19,7 +19,7 @@
                 <button v-on:click=removeToDo(item)>
                     remove
                 </button>
-                <button type='checkbox' v-on:click=markDone(item) >
+                <button type='checkbox' v-on:click=markDone(num) >
                     complete
                 </button>
                 
