vue calculator complete

--- a/Code/jesse_pena/js/calculator/calculator.html
+++ b/Code/jesse_pena/js/calculator/calculator.html
@@ -11,7 +11,7 @@
 <body>
     <div class="calculator">
         <div>
-            <input class="calculator-screen" type="text" placeholder="0" disabled>
+            <input class="calculator-screen" type="text" :placeholder='displayValue' disabled>
         </div>
         <div class="calculator-keys">
             <button class="operator" value="+" v-on:click=sum(numberString)>+</button>
@@ -31,7 +31,7 @@
             <button value="2" v-on:click=displayNumber(2)>2</button>
             <button value="3" v-on:click=displayNumber(3)>3</button>
 
-            <button value="0">0</button>
+            <button value="0" v-on:click=displayNumber(0)>0</button>
             <button class="equal-sign" value="=" v-on:click=execute(formula)>=</button>
             <button class="all-clear" value="AC" v-on:click=allClear(formula,numberString)>AC</button>
             <button value=".">.</button>
